# ActivityMonitor

./: ActivityMonitor.sln  Directory.Packages.props
ActivityMonitor/: ActivityMonitor.csproj  App.axaml  App.axaml.cs  ViewLocator.cs
ActivityMonitor.Android/: ActivityMonitor.Android.csproj  MainActivity.cs
ActivityMonitor.Android/Properties/: AndroidManifest.xml
ActivityMonitor.Browser/: ActivityMonitor.Browser.csproj  Program.cs
ActivityMonitor.Browser/Properties/: launchSettings.json
ActivityMonitor.Browser/wwwroot/: index.html
ActivityMonitor.Desktop/: ActivityMonitor.Desktop.csproj  Program.cs  app.manifest
ActivityMonitor.iOS/: ActivityMonitor.iOS.csproj  AppDelegate.cs  Info.plist  Main.cs
ActivityMonitor.iOS/Resources/: LaunchScreen.xib
ActivityMonitor/Converters/: Converters.cs  EqualsConverter.cs  IsCategoryTwoConverter.cs
ActivityMonitor/Services/: BackendProcessController.cs
ActivityMonitor/Styles/: Theme.axaml  (+2 more)
Backend/: ActivityClassifier.cs  Backend.csproj  BackendService.cs  DataCollector.cs
Backend/NotifierBuild/: .gitignore  CMakeLists.txt  UI-core.cpp  UI-core.h
Backend/NotifierBuild/imgui/: imgui_draw.cpp
Backend/NotifierBuild/src/: CommandManager.cpp  CommandManager.h  DescriptorManager.cpp  DescriptorManager.h  DeviceManager.cpp  DeviceManager.h  InitFlags.h  PipelineManager.cpp  PipelineManager.h  SwapchainManager.cpp  SwapchainManager.h  VulkanInstance.cpp  VulkanInstance.h  WindowManager.cpp  WindowManager.h
BusinessLogic/: ActivityClassifier.cs  BackendService.cs  BusinessLogic.csproj  DataCollector.cs  DatabaseManager.cs
Database/: Database.csproj  DatabaseInitializer.cs  DatabaseValidator.cs  DesignTimeDbContextFactory.cs  IDatabaseValidator.cs  TableValidator.cs
SyncServer/: DeviceSyncStore.cs  Program.cs  SyncContracts.cs  SyncServer.csproj
(+123 files in other folders)
